--- a/javascript/partials/directive/simpleform/views/datetime.html
+++ b/javascript/partials/directive/simpleform/views/datetime.html
@@ -5,7 +5,7 @@
            type="text"
            placeholder="{{ field.placeholder }}"
            name="{{ key }}"
-           ng-readonly="field.readonly"
+           ng-readonly="true"
            ng-disabled="field.disabled"
            ng-required="field.required">
 
