--- a/javascript/partials/modal/confirm.html
+++ b/javascript/partials/modal/confirm.html
@@ -1,7 +1,7 @@
 <div class="modal-header">
-    <!--<a class="btn btn-link btn-sm no-margin pull-right" ng-click="close()">-->
-    <!--<icon class="ace-icon fa fa-times"></icon>-->
-    <!--</a>-->
+    <a class="btn btn-link btn-sm no-margin pull-right" ng-click="close()">
+        <icon class="ace-icon fa fa-times"></icon>
+    </a>
     <h3 class="smaller lighter no-margin">{{title}}</h3>
 </div>
 
