--- a/javascript/partials/pages/test2.html
+++ b/javascript/partials/pages/test2.html
@@ -15,7 +15,7 @@
                 <h1></h1>
                 <button class="btn btn-sm btn-primary" ng-click="testCtl.showAlert()">show alert</button>
                 <button class="btn btn-sm btn-warning" ng-click="testCtl.showConfirm()">show confirm</button>
-                <button class="btn btn-sm btn-warning" ng-click="testCtl.showForm()">show confirm</button>
+                <button class="btn btn-sm btn-danger" ng-click="testCtl.showForm()">show form</button>
                 <!--<simple-form setting="testCtl.formSettings"-->
                              <!--ng-model="testCtl.formData"-->
                              <!--submit="testCtl.submit"-->
