--- a/javascript/partials/form/testform.html
+++ b/javascript/partials/form/testform.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-    <a class="btn btn-link btn-sm no-margin pull-right" ng-click="close()">
+    <a class="btn btn-link btn-sm no-margin pull-right" ng-click="formCtl.close()">
         <icon class="ace-icon fa fa-times"></icon>
     </a>
     <h3 class="smaller lighter no-margin">{{formCtl.formSettings.description}}</h3>
@@ -10,8 +10,13 @@
                  submit="formCtl.submit"
                  format="_horizontal">
         <div class="form-group">
-            <div class="col-sm-12 col-sm-offset-2">
-                <input class="btn btn-success btn-sm" type="submit" value="提交表单">
+            <div class="col-sm-12">
+                {{ formCtl.formData }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-sm-12">
+                <input class="btn btn-block btn-success btn-sm" type="submit" value="提交表单">
             </div>
         </div>
     </simple-form>
