修改了grunt自动生成模板功能

--- a/javascript/partials/home/index.html
+++ b/javascript/partials/home/index.html
@@ -11,7 +11,7 @@
             </button>
             <!--页面logo-->
             <div class="navbar-header pull-left">
-                <a href="/" class="navbar-brand">
+                <a ui-sref="home.index" class="navbar-brand">
                     <small>
                         <i class="fa fa-leaf"></i>
                         后台管理
