--- a/javascript/partials/directive/simpleform/views/simpleform_editor.html
+++ b/javascript/partials/directive/simpleform/views/simpleform_editor.html
@@ -1,14 +1,14 @@
 <div class="form-group has-feedback"
      ng-class="{'has-error':$form[key].$invalid && (showError || $form[key].$dirty)}">
 
-    <label class="control-label col-sm-2 hidden-xs">
+    <label class="control-label col-sm-3 col-lg-3 col-md-3 hidden-xs">
         <span ng-bind="field.label"></span>
         <i ng-if="field.required"
            class="glyphicon blue glyphicon-info-sign"
            title="必填项"></i>
     </label>
 
-    <div class="col-sm-10">
+    <div class="col-sm-9 col-lg-9 col-md-9">
         <simple-form-field key="key"
                            show-error="showError"
                            $form="$form"
