--- a/javascript/partials/pages/test2.html
+++ b/javascript/partials/pages/test2.html
@@ -29,5 +29,8 @@
                 <!--</simple-form>-->
             </div>
         </div>
+        <div class="col-xs-12">
+            <div id="grid1" ui-grid="testCtl.gridOptions" ui-grid-edit class="grid"></div>
+        </div>
     </div>
 </div>
