--- a/content/ng-grid/ui-grid.css
+++ b/content/ng-grid/ui-grid.css
@@ -148,30 +148,30 @@
   position: absolute;
 }
 /* Slide up/down animations */
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-add,
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove {
-  -webkit-transition: all 0.05s linear;
-  -moz-transition: all 0.05s linear;
-  -o-transition: all 0.05s linear;
-  transition: all 0.05s linear;
-  display: block !important;
-}
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-add.ng-hide-add-active,
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove {
-  -webkit-transform: translateY(-100%);
-  -moz-transform: translateY(-100%);
-  -o-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-  transform: translateY(-100%);
-}
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-add,
-.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove.ng-hide-remove-active {
-  -webkit-transform: translateY(0);
-  -moz-transform: translateY(0);
-  -o-transform: translateY(0);
-  -ms-transform: translateY(0);
-  transform: translateY(0);
-}
+/*.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-add,*/
+/*.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove {*/
+  /*-webkit-transition: all 0.05s linear;*/
+  /*-moz-transition: all 0.05s linear;*/
+  /*-o-transition: all 0.05s linear;*/
+  /*transition: all 0.05s linear;*/
+  /*display: block !important;*/
+/*}*/
+/*.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-add.ng-hide-add-active,*/
+/*.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove {*/
+  /*-webkit-transform: translateY(-100%);*/
+  /*-moz-transform: translateY(-100%);*/
+  /*-o-transform: translateY(-100%);*/
+  /*-ms-transform: translateY(-100%);*/
+  /*transform: translateY(-100%);*/
+/*}*/
+/*.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-add,*/
+/*.ui-grid-column-menu .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove.ng-hide-remove-active {*/
+  /*-webkit-transform: translateY(0);*/
+  /*-moz-transform: translateY(0);*/
+  /*-o-transform: translateY(0);*/
+  /*-ms-transform: translateY(0);*/
+  /*transform: translateY(0);*/
+/*}*/
 /* Slide up/down animations */
 .ui-grid-menu-button .ui-grid-menu .ui-grid-menu-mid.ng-hide-add,
 .ui-grid-menu-button .ui-grid-menu .ui-grid-menu-mid.ng-hide-remove {
@@ -376,7 +376,7 @@ select.ui-grid-filter-select:hover {
   opacity: 0.66;
 }
 .ui-grid-cell {
-  overflow: hidden;
+  overflow: visible;
   float: left;
   background-color: inherit;
   border-right: 1px solid;
