使用almond压缩，修改了requirejs.toUrl方法。 把controller放在一个文件中加载。 最终压缩成一个js文件。

--- a/javascript/partials/home/home_sidebar.html
+++ b/javascript/partials/home/home_sidebar.html
@@ -2,7 +2,7 @@
 <!--<div class="sidebar sidebar-fixed responsive sidebar-scroll">-->
 <div class="nav-wrap-up pos-rel">
     <div class="nav-wrap" style="overflow: scroll;" ng-style="{'max-height':$root.size.height}">
-        <div ng-controller="SidebarController as sidebarCtl" style="position: relative; top: 0px; transition-property: top; -webkit-transition-property: top; transition-duration: 0.15s; -webkit-transition-duration: 0.15s;">
+        <div style="position: relative; top: 0px; transition-property: top; -webkit-transition-property: top; transition-duration: 0.15s; -webkit-transition-duration: 0.15s;">
             <!--快捷键-->
             <!--<div class="sidebar-shortcuts" id="sidebar-shortcuts">-->
                 <!--<div class="sidebar-shortcuts-large" id="sidebar-shortcuts-large">-->
