--- a/javascript/partials/home/index.html
+++ b/javascript/partials/home/index.html
@@ -1,4 +1,4 @@
-<div class="no-skin mob-safari" ng-controller="HomeController as homeCtl">
+<div class="no-skin mob-safari">
     <!--navbar-->
     <div class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-container">
