--- a/javascript/partials/login/forget_phone.html
+++ b/javascript/partials/login/forget_phone.html
@@ -1,4 +1,4 @@
-<div id="forgot-box" class="forgot-box widget-box no-border visible" ng-controller="ForgetPhoneController as forgetCtl">
+<div id="forgot-box" class="forgot-box widget-box no-border visible">
     <div class="widget-body">
         <div class="widget-main">
             <h4 class="header red lighter bigger">
