--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -1,5 +1,4 @@
-<div class="login-box visible widget-box no-border navbar-fixed-top"
-     ng-controller="LoginController as loginCtl">
+<div class="login-box visible widget-box no-border navbar-fixed-top">
     <div class="widget-body">
         <div class="widget-main">
             <h4 class="header blue lighter bigger">
