--- a/javascript/partials/login/index.html
+++ b/javascript/partials/login/index.html
@@ -1,4 +1,4 @@
-<div class="main-container" ng-controller="LoginHomeController as loginHomeCtl">
+<div class="main-container">
     <div class="main-content">
         <div class="row">
             <div class="col-sm-10 col-sm-offset-1">
