--- a/javascript/partials/login/register.html
+++ b/javascript/partials/login/register.html
@@ -1,4 +1,4 @@
-<div id="signup-box" class="signup-box widget-box no-border visible" ng-controller="RegisterController as regCtl">
+<div id="signup-box" class="signup-box widget-box no-border visible" >
     <div class="widget-body">
         <div class="widget-main">
             <h4 class="header green lighter bigger">
