--- a/javascript/partials/directive/simpleform/views/simpleform_editor_inline.html
+++ b/javascript/partials/directive/simpleform/views/simpleform_editor_inline.html
@@ -1,7 +1,7 @@
 <div class="form-group"
      ng-class="{'has-error':$form[key].$invalid && (showError || $form[key].$dirty),'has-feedback':field.showGlyphicon}">
 
-    <label class="sr-only">
+    <label>
         <span ng-bind="field.label"></span>
         <i ng-if="field.required"
            class="glyphicon blue glyphicon-info-sign"
