--- a/javascript/partials/common/grid_toolbar.html
+++ b/javascript/partials/common/grid_toolbar.html
@@ -1,14 +1,12 @@
-<div class="text-center">
+<div class="text-center navbar-btn">
     <div toolbar
-         showmini="false"
-         showtitle="false"
+         tool-type="_icon_only"
          tools="grid.appScope.tools"
          datas="this"
-         class="hidden-sm hidden-xs btn-group"></div>
+         class="hidden-sm hidden-xs action-buttons"></div>
     <div class="hidden-md hidden-lg"
          toolbar
-         showmini="true"
-         showtitle="false"
-         ng-model="$data"
-         tools="COL_FIELD CUSTOM_FILTERS"></div>
+         tool-type="_phone"
+         datas="$data"
+         tools="grid.appScope.tools"></div>
 </div>
