--- a/javascript/partials/home/index.html
+++ b/javascript/partials/home/index.html
@@ -23,23 +23,24 @@
                 <ul class="nav ace-nav">
                     <li class="light-blue" dropdown>
                         <a class="dropdown-toggle" dropdown-toggle>
-                            <img class="nav-user-photo" src="images/avatars/user.jpg" alt="Jason's Photo">
+                            <img class="nav-user-photo" ng-src="{{$root.user.avatar_url}}"
+                                 src="images/avatars/user.jpg">
 								<span class="user-info">
-									<small>欢迎您,</small>
-									NICK
+									<small>欢迎您，</small>
+									<span ng-bind="$root.user.nickname"></span>
 								</span>
 
                             <i class="ace-icon fa fa-caret-down"></i>
                         </a>
                         <ul class="user-menu dropdown-menu-right dropdown-menu dropdown-yellow dropdown-caret dropdown-close">
                             <li>
-                                <a href="#">
+                                <a ui-sref="home.setting" href="#">
                                     <i class="ace-icon fa fa-cog"></i>
                                     设置
                                 </a>
                             </li>
                             <li>
-                                <a href="#">
+                                <a ui-sref="home.profile" href="#">
                                     <i class="ace-icon fa fa-user"></i>
                                     个人主页
                                 </a>
@@ -62,7 +63,8 @@
     <div class="main-container main-container-fixed-top">
 
         <!--侧边栏-->
-        <div id="sidebar" class="sidebar sidebar-fixed responsive sidebar-scroll" ng-class="{'display':homeCtl.isShowMenu}">
+        <div id="sidebar" class="sidebar sidebar-fixed responsive sidebar-scroll"
+             ng-class="{'display':homeCtl.isShowMenu}">
             <div ui-view="sidebarView"></div>
         </div>
         <!--主要内容-->
