--- a/javascript/partials/login/login.html
+++ b/javascript/partials/login/login.html
@@ -44,11 +44,11 @@
                     <i class="ace-icon fa fa-qq"></i>
                 </a>
 
-                <a class="btn btn-info">
+                <a class="btn btn-danger">
                     <i class="ace-icon fa fa-weibo"></i>
                 </a>
 
-                <a class="btn btn-danger">
+                <a class="btn btn-success">
                     <i class="ace-icon fa fa-weixin"></i>
                 </a>
             </div>
